Bug fix: Gallery overstretched the height on certain devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -617,6 +617,7 @@ input[type="checkbox"]:checked + .menu {
   width: 100%;
   max-width: 864px;
   height: auto;
+  max-height: 576px;
   justify-self: center;
   overflow: hidden;
   border-radius: 5px;
